@@ -42,9 +42,11 @@ Config:
     A formatting string instructing hekad how to turn a time string into the
     actual time representation used internally. Example timestamp layouts can
     be seen in `Go's time documentation <http://golang.org/pkg/time/#pkg-
-    constants>`_.  The default layout is ISO8601 - the same as
-    Javascript.
-
+    constants>`_.  The default layout is ISO8601 - the same as Javascript. In
+    addition to the Go time formatting, special `timestamp_layout` values of
+    "Epoch", "EpochMilli", "EpochMicro", and "EpochNano" are supported for
+    Unix style timestamps represented in seconds, milliseconds, microseconds,
+    and nanoseconds since the Epoch, respectively.
 - timestamp_location (string):
     Time zone in which the timestamps in the text are presumed to be in.
     Should be a location name corresponding to a file in the IANA Time Zone
@@ -52,7 +54,9 @@ Config:
     `time.LoadLocation()` function (see
     http://golang.org/pkg/time/#LoadLocation). Defaults to "UTC". Not required
     if valid time zone info is embedded in every parsed timestamp, since those
-    can be parsed as specified in the `timestamp_layout`.
+    can be parsed as specified in the `timestamp_layout`. This setting will
+    have no impact if one of the supported "Epoch*" values is used as the
+    `timestamp_layout` setting.
 
 Example:
 
