@@ -9,12 +9,18 @@
 #
 # Contributor(s):
 #   Ben Bangert (bbangert@mozilla.com)
+#   Rob Miller (rmiller@mozilla.com)
 #
 # ***** END LICENSE BLOCK *****/
 
 package message
 
 import (
+	"errors"
+	"fmt"
+	"math"
+	"strconv"
+	"strings"
 	"time"
 )
 
@@ -40,18 +46,72 @@ var (
 
 // Parse a time with the supplied timeLayout, falling back to all the
 // basicTimeLayouts.
-func ForgivingTimeParse(timeLayout, inputTime string, loc *time.Location) (
-	parsedTime time.Time, err error) {
+func ForgivingTimeParse(timeLayout, inputTime string, loc *time.Location) (time.Time, error) {
 
-	parsedTime, err = time.ParseInLocation(timeLayout, inputTime, loc)
-	if err == nil {
-		return
+	var (
+		parsedTime time.Time
+		err        error
+	)
+
+	if strings.HasPrefix(timeLayout, "Epoch") {
+		var (
+			parsedInt             uint64
+			decDigits, multiplier int
+		)
+
+		switch timeLayout {
+		case "Epoch":
+			multiplier = 1e9
+		case "EpochMilli":
+			multiplier = 1e6
+		case "EpochMicro":
+			multiplier = 1e3
+		default:
+			if timeLayout != "EpochNano" {
+				err := fmt.Errorf("Unrecognized `Epoch` time format: %s", timeLayout)
+				return parsedTime, err
+			}
+		}
+
+		i := strings.Index(inputTime, ".")
+		if i == -1 {
+			// Integer values are easy.
+			parsedInt, err = strconv.ParseUint(inputTime, 10, 64)
+		} else {
+			// No partial nanoseconds.
+			if timeLayout == "EpochNano" {
+				err := errors.New("`EpochNano` time format must be an integer value")
+				return parsedTime, err
+			}
+			// Convert to int before we parse to avoid float conversion
+			// errors.
+			decDigits = len(inputTime) - i - 1
+			intStr := fmt.Sprintf("%s%s", inputTime[:i], inputTime[i+1:])
+			parsedInt, err = strconv.ParseUint(intStr, 10, 64)
+		}
+		if err != nil {
+			err = fmt.Errorf("Error parsing %s time: %s", timeLayout, err.Error())
+			return parsedTime, err
+		}
+
+		if multiplier != 0 {
+			if decDigits != 0 {
+				multiplier = multiplier / int(math.Pow10(decDigits))
+			}
+			parsedInt = parsedInt * uint64(multiplier)
+		}
+
+		return time.Unix(0, int64(parsedInt)), nil
 	}
+
+	if parsedTime, err = time.ParseInLocation(timeLayout, inputTime, loc); err == nil {
+		return parsedTime, nil
+	}
+
 	for _, layout := range basicTimeLayouts {
-		parsedTime, err = time.ParseInLocation(layout, inputTime, loc)
-		if err == nil {
-			return
+		if parsedTime, err = time.ParseInLocation(layout, inputTime, loc); err == nil {
+			return parsedTime, nil
 		}
 	}
-	return
+	return parsedTime, err
 }
